@@ -5,6 +5,7 @@ Version 1.3.15+svn:
     * don't display 'Remote scenario' for reloaded games in the multiplayer
       lobby which is wrong in most cases (fixes bug #10882), the display
       of 'Reloaded game' is disabled for now because of the string freeze
+    * Fixed MP saves loadind to choose correct human side (bug #10894)
 
 Version 1.3.15:
  * language and i18n:
